[package]
name = "zerocms-tagger"
version = "0.1.0"
edition = "2021"
description = "High-performance template instrumenter for ZeroCMS"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
